looping models, removed space from rel_maha method name, other fixes

--- a/analyze_evaluations.ipynb
+++ b/analyze_evaluations.ipynb
@@ -35,17 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "681573f7-d4e9-4f54-836f-5f136fbdd2c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_names = ['vit_base_patch16_384_21kpre']"
+    "model_names = ['BiT_m']#['vit_base_patch16_384_21kpre']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "ec5d7515-dce6-48a1-b7c8-2ca1a34f7624",
    "metadata": {},
    "outputs": [
@@ -53,8 +53,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No evaluation outputs found at cache/scores/vit_base_patch16_384_21kpre/NINCO_OOD_classes/E2023-02-09-16-27-25.npz.\n",
-      "No evaluation outputs found at cache/scores/vit_base_patch16_384_21kpre/NINCO_OOD_classes/E2023-02-09-16-27-25.npz.\n"
+      "No evaluation outputs found for cache/scores/BiT_m/NINCO_OOD_unit_tests.\n",
+      "No evaluation outputs found for cache/scores/BiT_m/NINCO_popular_datasets_subsamples.\n"
      ]
     }
    ],
@@ -81,17 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "7ffdc173-bc8f-48d4-88fd-a4c37a54188c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'NINCO': <numpy.lib.npyio.NpzFile at 0x7f2d25f13370>}"
+       "{'NINCO': <numpy.lib.npyio.NpzFile at 0x7f82129ac9a0>}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,17 +102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "193e5407-8582-4a49-a485-8932928e9754",
    "metadata": {},
    "outputs": [],
    "source": [
-    "MSP_results = {k:v['methods_results'].item()['MSP'] for k,v in evaluation_outputs.items()}"
+    "MSP_results = {k:v['methods_results'].item()['Mahalanobis'] for k,v in evaluation_outputs.items()}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "a0dc0371-cc06-4176-b2ae-2a178a50f0ed",
    "metadata": {},
    "outputs": [
@@ -120,52 +120,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AFA (cyanobacterium)                     95.65%\n",
-      "bluestriped grunt                        43.43%\n",
-      "California pitcher plant                 21.00%\n",
-      "California slender salamander            74.00%\n",
-      "California two-spot octopus              40.00%\n",
-      "caracal                                  79.00%\n",
-      "cat-faced spider                         87.00%\n",
-      "Central American tapir                   14.00%\n",
-      "chicken quesadilla                       84.00%\n",
-      "common cuttlefish                        31.00%\n",
-      "crème brûlée                             52.53%\n",
-      "cupcakes                                 81.25%\n",
-      "donuts                                   81.00%\n",
-      "dreamfish                                62.00%\n",
-      "dune thistle                             52.00%\n",
-      "dusky flathead (fish)                    58.00%\n",
-      "E. micromeris (cactus)                   33.00%\n",
-      "Eastern leaf-footed bug                  33.00%\n",
-      "European paper wasp                      73.00%\n",
-      "false killer whale                       80.60%\n",
-      "field road                               26.04%\n",
-      "forest path                              24.00%\n",
-      "Franciscan wallflower                    31.00%\n",
-      "Galápagos fur seal                      100.00%\n",
-      "giant cuttlefish                         31.31%\n",
-      "Horse Hoof clam                          93.55%\n",
-      "Indo-Pacific bottlenose dolphin          58.00%\n",
-      "long-tailed silverfish                   59.00%\n",
-      "Lumholtz's tree-kangaroo                 69.00%\n",
-      "M. wesenbergii (cyanobacterium)          96.97%\n",
-      "marbled newt                             88.00%\n",
-      "Mexican lime cactus                      11.00%\n",
-      "Pampas deer                              82.93%\n",
-      "redbreast sunfish                        71.00%\n",
-      "rosybells (flowering plant)              64.00%\n",
-      "ruby octopus                             46.00%\n",
-      "silver-haired bat                        11.11%\n",
-      "skipper caterpillar                      11.00%\n",
+      "AFA (cyanobacterium)                      2.17%\n",
+      "bluestriped grunt                        50.51%\n",
+      "California pitcher plant                  3.00%\n",
+      "California slender salamander            69.00%\n",
+      "California two-spot octopus              78.00%\n",
+      "caracal                                  90.00%\n",
+      "cat-faced spider                         77.00%\n",
+      "Central American tapir                   91.00%\n",
+      "chicken quesadilla                       96.00%\n",
+      "common cuttlefish                        87.00%\n",
+      "crème brûlée                             46.46%\n",
+      "cupcakes                                 58.75%\n",
+      "donuts                                   76.00%\n",
+      "dreamfish                                25.00%\n",
+      "dune thistle                             10.00%\n",
+      "dusky flathead (fish)                    80.00%\n",
+      "E. micromeris (cactus)                    8.00%\n",
+      "Eastern leaf-footed bug                  82.00%\n",
+      "European paper wasp                      60.00%\n",
+      "false killer whale                       71.64%\n",
+      "field road                               63.54%\n",
+      "forest path                              31.00%\n",
+      "Franciscan wallflower                     0.00%\n",
+      "Galápagos fur seal                       97.80%\n",
+      "giant cuttlefish                         77.78%\n",
+      "Horse Hoof clam                          54.84%\n",
+      "Indo-Pacific bottlenose dolphin          64.00%\n",
+      "long-tailed silverfish                   56.00%\n",
+      "Lumholtz's tree-kangaroo                 91.00%\n",
+      "M. wesenbergii (cyanobacterium)           0.00%\n",
+      "marbled newt                             87.00%\n",
+      "Mexican lime cactus                       0.00%\n",
+      "Pampas deer                              95.12%\n",
+      "redbreast sunfish                        54.00%\n",
+      "rosybells (flowering plant)               0.00%\n",
+      "ruby octopus                             67.00%\n",
+      "silver-haired bat                        29.29%\n",
+      "skipper caterpillar                      12.00%\n",
       "sky                                      23.53%\n",
-      "southern calamari                        21.21%\n",
-      "spaghetti bolognese                      68.66%\n",
-      "sweet pea                                13.00%\n",
-      "two-toed amphiuma (salamander)           77.84%\n",
-      "waffles                                  59.02%\n",
-      "yellow trumpets                          13.00%\n",
-      "ʻōhelo ʻai (flowering plant)             68.00%\n"
+      "southern calamari                        42.42%\n",
+      "spaghetti bolognese                      77.61%\n",
+      "sweet pea                                 2.00%\n",
+      "two-toed amphiuma (salamander)           73.30%\n",
+      "waffles                                  50.82%\n",
+      "yellow trumpets                           0.00%\n",
+      "ʻōhelo ʻai (flowering plant)              0.00%\n"
      ]
     }
    ],
@@ -180,6 +180,14 @@
     "        s += f\"{MSP_results['NINCO'][row['filename']]['fpr_at_95']:3.2%}\".rjust(7)\n",
     "        print(s)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24666c02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -198,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
